--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14",
     "font-awesome": "^4.7.0",
-    "bootstrap": "^3.3.7",  
+    "bootstrap": "^3.3.7"
   },
   "devDependencies": {
     "@angular/cli": "1.3.1",
