--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,1 +1,17 @@
-server.port=8080 # Server HTTP port.
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/itechart_group_db?autoReconnect=true&useSSL=false
+    username: root
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        use_sql_comments: true
+        format_sql: true
+logging:
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+  file: ${catalina.home}/logs/trucking.log
