--- a/server/src/main/resources/config/application.yml
+++ b/server/src/main/resources/config/application.yml
@@ -9,6 +9,9 @@ spring:
         show_sql: true
         use_sql_comments: true
         format_sql: true
+liquibase:
+  enabled: true
+  change-log: classpath:/config/liquibase/master.xml
 #logging:
 #  pattern:
 #    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
