--- a/server/src/main/resources/config/application-test.yml
+++ b/server/src/main/resources/config/application-test.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/itechart_group_db?autoReconnect=true&useSSL=false
+    url: jdbc:mysql://localhost:3306/itechart_group_test_db?autoReconnect=true&useSSL=false
     username: root
     password:
   jpa:
@@ -11,4 +11,10 @@ spring:
         format_sql: true
 liquibase:
   enabled: true
-  change-log: classpath:/config/liquibase/dev_vladSyty.xml
+  change-log: classpath:/config/liquibase/test.xml
+app:
+  jwt:
+    secret: qwerty
+logging:
+  level:
+    com.itechart.trucking: DEBUG
