--- a/server/src/main/resources/config/application-test_vladSyty.yml
+++ b/server/src/main/resources/config/application-test_vladSyty.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/itechart_group_db?autoReconnect=true&useSSL=false
+    url: jdbc:mysql://localhost:3306/itechart_group_test_db?autoReconnect=true&useSSL=false
     username: root
     password:
   jpa:
