--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "primeng": "^5.0.2",
     "rxjs": "^5.5.5",
