--- a/server/pom.xml
+++ b/server/pom.xml
@@ -133,6 +133,11 @@
             <version>6.0.5.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-solr</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
