--- a/client/package.json
+++ b/client/package.json
@@ -34,11 +34,13 @@
     "@angular/cli": "1.5.4",
     "@angular/compiler-cli": "^5.1.0",
     "@angular/language-service": "^5.1.0",
+    "@types/file-saver": "^1.3.0",
     "@types/googlemaps": "^3.30.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "file-saver": "^1.3.3",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
