--- a/server/pom.xml
+++ b/server/pom.xml
@@ -133,6 +133,12 @@
             <version>6.0.5.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
+
     </dependencies>
 
     <build>
